Fixed table text alignment #4

--- a/src/App.scss
+++ b/src/App.scss
@@ -25,6 +25,18 @@ body {
         text-align: center;
       }
 
+      table.pmcPanel {
+
+        td {
+
+          p.description {
+            text-align: left;
+          }
+
+        }
+
+      }
+
     }
 
     &.info {
